--- a/AuFe/Views/Account/Login.cshtml
+++ b/AuFe/Views/Account/Login.cshtml
@@ -19,9 +19,9 @@
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <div class="form-group">
-            <label asp-for="Login">Введите Email</label>
-            <input type="text" asp-for="Login" />
-            <span asp-validation-for="Login" />
+            <label asp-for="Email">Введите Email</label>
+            <input type="text" asp-for="Email" />
+            <span asp-validation-for="Email" />
         </div>
         <div class="form-group">
             <label asp-for="Password">Введите пароль</label>
